mdapi_output_dir/objects/Store__c.object
<CustomObject>
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    <label>Store</label>
    
    <nameField>
        
        <label>Store Name</label>
        
        
        <type>Text</type>
        
    </nameField>
    
    <pluralLabel>Stores</pluralLabel>
    
    
    <sharingModel>ReadWrite</sharingModel>
    
    
<fields>
        
    <fullName>City__c</fullName>
        
        
    <label>City</label>
        
    <length>40</length>
        
        
        
        
    <type>Text</type>
        
        
</fields>
    <fields>
        
    <fullName>Phone__c</fullName>
        
        
    <label>Phone</label>
        
        
        
        
    <type>Phone</type>
        
</fields>
    <fields>
        
    <fullName>State__c</fullName>
        
        
    <inlineHelpText>Only use the initials for the state i.e. GA - Georgia</inlineHelpText>
        
    <label>State</label>
        
    <length>2</length>
        
        
        
        
    <type>Text</type>
        
        
</fields>
    <fields>
        
    <fullName>Store_Owner__c</fullName>
        
    <deleteConstraint>SetNull</deleteConstraint>
        
        
    <label>Store Owner</label>
        
    <referenceTo>Store_Owner__c</referenceTo>
        
    <relationshipLabel>Stores</relationshipLabel>
        
    <relationshipName>Stores</relationshipName>
        
        
        
        
    <type>Lookup</type>
        
</fields>
    <fields>
        
    <fullName>Street_Address__c</fullName>
        
        
    <label>Street Address</label>
        
    <length>40</length>
        
        
        
        
    <type>Text</type>
        
        
</fields>
    <fields>
        
    <fullName>Zip__c</fullName>
        
        
    <label>Zip</label>
        
    <length>10</length>
        
        
        
        
    <type>Text</type>
        
        
</fields>
    <listViews>
        
    <fullName>All</fullName>
        
    <filterScope>Everything</filterScope>
        
    <label>All</label>
        
</listViews>
</CustomObject>